main.js adding dinamic lists

--- a/index.html
+++ b/index.html
@@ -9,6 +9,12 @@
 
 <body>
   <h1>Cristhians Ruiz WDD330 Portfolio</h1>
+  <section>
+    <h2>Table of Contents</h2>
+    <ol id="contentList"></ol>
+  </section>
+
+  <script src="js/main.js"></script>
 </body>
 
 </html>
