--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <title>WDD330</title>
 </head>
 
-<body>
+<body onload="loadContents()">
   <h1>Cristhians Ruiz WDD330 Portfolio</h1>
   <section>
     <h2>Table of Contents</h2>
