--- a/index.html
+++ b/index.html
@@ -4,11 +4,14 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="css/main.css">
   <title>WDD330</title>
 </head>
 
 <body onload="loadContents()">
-  <h1>Cristhians Ruiz WDD330 Portfolio</h1>
+  <header>
+    <h1>Cristhians Ruiz WDD330 Portfolio</h1>
+  </header>
   <section>
     <h2>Table of Contents</h2>
     <ol id="contentList"></ol>
