Portfolo ready for week1

--- a/week1/index.html
+++ b/week1/index.html
@@ -4,11 +4,31 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="../css/main.css">
   <title>Week 1</title>
 </head>
 
 <body>
-  <h1>WDD 330 - Week 1</h1>
+  <header>
+    <h1>Cristhians Ruiz WDD330 Portfolio</h1>
+  </header>
+  <h2>WDD 330 - Week 1</h2>
+
+  <section>
+    <h3>Exercises</h3>
+  </section>
+  <ol>
+    <li><a href="exercises/story_editor.html">Story Editor</a></li>
+  </ol>
+
+  <section>
+    <h3>Notes and comments</h3>
+    <ul>
+      <li>I think a forum is needed, or maybe a slack workspace</li>
+      <li>BYUI Store has some issues to activate my SitePoint code, after purchase it</li>
+    </ul>
+  </section>
+
 </body>
 
 </html>
