--- a/week2/index.html
+++ b/week2/index.html
@@ -4,11 +4,29 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="../css/main.css">
   <title>Week 2</title>
 </head>
 
 <body>
-  <h1>WDD 330 - Week 2</h1>
+  <header>
+    <h1>Cristhians Ruiz WDD330 Portfolio</h1>
+  </header>
+  <h2>WDD 330 - Week 2</h2>
+
+  <section>
+    <h3>Exercises</h3>
+  </section>
+  <ol>
+    <li><a href="#">Future exercise</a></li>
+  </ol>
+
+  <section>
+    <h3>Notes and comments</h3>
+    <ul>
+    </ul>
+  </section>
+
 </body>
 
 </html>
