--- a/week2/index.html
+++ b/week2/index.html
@@ -18,12 +18,27 @@
     <h3>Exercises</h3>
   </section>
   <ol>
-    <li><a href="#">Future exercise</a></li>
+    <li><a href="https://eloquentjavascript.net/code/#3.3">Eloquent java practice page with functions</a></li>
   </ol>
 
   <section>
     <h3>Notes and comments</h3>
     <ul>
+      <li>Good reading this week, functions was the most interesting this week</li>
+      <li>Callbacks: functions can be pass as a parameter to another function</li>
+      <li>A callback function is a function passed into another function as an argument, which is then invoked inside
+        the outer function to complete some kind of routine or action.</li>
+      <li>
+        <p class="example">Example of callback:</p>
+        <img src="images/callback.png" alt="callback example">
+      </li>
+      <li>An arrow function expression is a compact alternative to a traditional function expression, but is limited and
+        can't be used in all situations.</li>
+      <li>
+        <p class="example">Example of arrow function:</p>
+        <img src="images/arrowFunction.png" alt="arrow function example">
+      </li>
+
     </ul>
   </section>
 
