--- a/todo/index.html
+++ b/todo/index.html
@@ -17,7 +17,7 @@
       </ul>
       <div class="tasklist-footer">
         <ul>
-          <li>__ task left</li>
+          <li><span class="tasks-left" id="tasksLeft"></span> task left</li>
           <li><a href="#" onclick="filter(this.text)">All</a></li>
           <li><a href="#" onclick=filter(this.text)>Active</a></li>
           <li><a href="#" onclick=filter(this.text)>Complete</a></li>
