--- a/todo/index.html
+++ b/todo/index.html
@@ -26,7 +26,7 @@
     </div>
 
     <div class="task-add" id="addtask">
-      <input type="text" id="add">
+      <input type="text" id="add" onkeyUp="enterPress(event)">
       <button class="btn" onclick="addTask()">+</button>
     </div>
   </main>
