week 9 notes html5 apis

--- a/week9/index.html
+++ b/week9/index.html
@@ -86,7 +86,22 @@
         <li>
 
           <h4>HTML5 APIs</h4>
-          <p>Scaling, Rotation, Skew</p>
+          <p>The HTML5 specification contains a number of APIs that help to gain access to hardware, such as cameras,
+            batteries, geolocation, and the graphics card. Hardware evolves quickly, and APIs are frequently introduced
+            to give developers access, and control new features that appear in the latest devices.</p>
+        </li>
+
+        <li>
+          <p>This is a link to all the APIs available from MDN site.</p>
+          <a href="https://developer.mozilla.org/en-US/docs/Web/API">MDN Web Docs - Web APIs</a>
+        </li>
+
+        <li class="category"><span class="subtitle">HTML5 APIs Tutorial</span>
+          <p>A good and quick tutorial about HTML5 APIs:</p>
+          <iframe width="560" height="315" src="https://www.youtube.com/embed/shoJ-PrfL3k" title="YouTube video player"
+            frameborder="0"
+            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+            allowfullscreen></iframe>
         </li>
       </ul>
     </div>
