Movie Pick page navigation ready

--- a/moviePick/index.html
+++ b/moviePick/index.html
@@ -14,17 +14,17 @@
     <h1>The Movie Pick</h1>
   </header>
   <nav>
-    <a href="#">My Movie Picks</a>
-    <a href="#">Movie Search</a>
-    <a href="#">Top Rated Movies</a>
-    <a href="#">Popular Movies</a>
+    <a id="moviePicks" href="#">My Movie Picks</a>
+    <a id="movieSearch" href="#">Movie Search</a>
+    <a id="movieRated" href="#">Top Rated Movies</a>
+    <a id="moviePopular" href="#">Popular Movies</a>
 
   </nav>
   <main>
     <div class="container">
-      <h1>Search a Movie</h1>
+      <h1 id="pageTitle">Search a Movie</h1>
 
-      <form action="">
+      <form id="formSearch" action="">
         <div class="form-group">
           <input type="text" id="inputSearch" class="input-basic" placeholder="Input a movie name">
         </div>
