Movie Pick crud add movie

--- a/moviePick/index.html
+++ b/moviePick/index.html
@@ -35,6 +35,7 @@
       <div id="movieCrud" class="movie-crud no-display">
         <form action="" method="POST">
           <button id="save" class="button button-save">Save to My Picks</button>
+          <button id="delete" class="button button-delete">Remove from My Picks</button>
         </form>
       </div>
     </div>
