Movie Pick all logic done

--- a/moviePick/index.html
+++ b/moviePick/index.html
@@ -37,6 +37,7 @@
           <button id="save" class="button button-save">Save to My Picks</button>
           <button id="delete" class="button button-delete">Remove from My Picks</button>
         </form>
+        <p id="crudMessage" class="message"></p>
       </div>
     </div>
   </main>
