--- a/moviePick/index.html
+++ b/moviePick/index.html
@@ -14,10 +14,12 @@
     <h1>The Movie Pick</h1>
   </header>
   <nav>
-    <a id="moviePicks" href="#">My Movie Picks</a>
-    <a id="movieSearch" href="#">Movie Search</a>
-    <a id="movieRated" href="#">Top Rated Movies</a>
-    <a id="moviePopular" href="#">Popular Movies</a>
+    <ul class="menubar">
+      <li class="menu-item"><a id="moviePicks" href="#">My Movie Picks</a></li>
+      <li class="menu-item"><a id="movieSearch" href="#">Movie Search</a></li>
+      <li class="menu-item"><a id="movieRated" href="#">Top Rated Movies</a></li>
+      <li class="menu-item"><a id="moviePopular" href="#">Popular Movies</a></li>
+    </ul>
 
   </nav>
   <main>
@@ -43,10 +45,13 @@
   </main>
 
   <footer>
-    <h3>this is the footer</h3>
-  </footer>
+    <div class="copyright">&copy; The Movie Pick, local storage version, All rights reserved</div>
+    <div class="fair-use">All images used are believed to be in "Fair Use". Pease notify the author if any are not and
+      they will be removed</div>
+    <div class="fair-use">This app uses The Movie Database API, TMDB</div>
+    <div class="updated">Last Updated: April 6, 2021</div>
 
-  <script src="./js/app.js" type="module"></script>
+    <script src="./js/app.js" type="module"></script>
 </body>
 
 </html>
